--- a/src/pages/About Me/App.css
+++ b/src/pages/About Me/App.css
@@ -26,12 +26,11 @@ html, body{
     width: 100%;
     height: 100vh;
     align-items: center;
-    /*background-image: url('src/assets/img.png');*/
+    justify-content: center;
     background-position-x: center;
     background-repeat: no-repeat;
     background-position-y: 75px;
     overflow-y: scroll;
-
 }
 
 .img{
@@ -109,7 +108,14 @@ html, body{
     margin-right: 20px;
 }
 
-@media (max-width: 1000px) {
+.title1{
+    color: white;
+    margin-bottom: 55px;
+    font-size: 50px;
+    font-weight: 100;
+}
+
+@media (max-width: 1200px) {
     .nav {
         height: 50px;
         width: 90%;
